After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670670 - Missing Mnemonics
Missing Mnemonics
Status: RESOLVED FIXED
Product: baobab
Classification: Core
Component: general
git master
Other Linux
: Normal minor
: ---
Assigned To: Baobab Maintainers
Baobab Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-23 11:36 UTC by André Klapper
Modified: 2012-07-15 16:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add miss mnemonics (2.05 KB, patch)
2012-02-26 22:33 UTC, Leandro Toledo
committed Details | Review

Description André Klapper 2012-02-23 11:36:29 UTC
The followng strings miss mnemonics (keyboard accelerators, the thing that can be accessed with the Alt key and shows and underlined letter):

#: ../src/baobab-chart.c:905
msgid "Move to parent folder"

#: ../src/baobab-chart.c:909
msgid "Zoom in"

#: ../src/baobab-chart.c:913
msgid "Zoom out"

#: ../src/baobab-chart.c:917
msgid "Save screenshot"
Comment 1 Leandro Toledo 2012-02-26 22:33:10 UTC
Created attachment 208458 [details] [review]
Add miss mnemonics

My first patch.
Comment 2 Paolo Borelli 2012-02-27 07:10:03 UTC
Review of attachment 208458 [details] [review]:

Hi Leandro! The patch look great, I'll apply it soon.
Comment 3 André Klapper 2012-03-14 20:58:35 UTC
(Just a reminder: We are under String freeze for GNOME 3.4.)
Comment 4 Piotr Drąg 2012-07-15 16:16:50 UTC
I committed the patch. I hope it's ok.

http://git.gnome.org/browse/baobab/commit/?id=906bd37cfc6dbd60297eae1684ee1bc8da107c50