Add missing mnemonics

Add missing mnemonics to strings in chart.
Basically I replaced gtk_image_menu_item_new_with_label with
gtk_image_menu_item_new_with_mnemonic and added an _ to do
a mnemonic.

https://bugzilla.gnome.org/show_bug.cgi?id=670670